config/security - creating new routes swaggers
