# app/routes/userRoutes.js
@@ -15,7 +15,7 @@ router.post('/resendcode', userController.resendConfirmationCodeController);
 router.post('/security-questions/check', userController.checkSecurityQuestionAnswer);
 router.post('/security-questions/get', userController.getSecurityQuestions);
 router.post('/security-questions', userController.addSecurityQuestions);
-router.post('/security-email', userController.addSecurityQuestions);
+router.post('/security-email', userController.userRecoveryEmail);
 router.post('/confirm-second-email', userController.confirmSecondEmailController);
 
 export default router;
